<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.eclipse.ecf</groupId>
    <artifactId>grpc-osgi-generator.parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>grpc-osgi-generator.parent</name>
    <description>OSGi service interface generator protobuf plugin</description>
    <url>https://github.com/ECF/grpc-osgi-generator</url>

    <licenses>
        <license>
            <name>Apache 2 License</name>
            <url>https://github.com/ECF/grpc-osgi-generator/blob/master/LICENSE</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>scottslewis</id>
            <name>Scott Lewis</name>
            <email>scottslewis@gmail.com</email>
        </developer>
    </developers>

    <modules>
    	<module>generator</module>
    </modules>

    <properties>
        <!-- Maven Plugin Versions -->
        <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
        <compiler.plugin.version>3.8.0</compiler.plugin.version>

        <!-- Dependency Versions -->
        <grpc.version>1.23.0</grpc.version>
        <protoc.version>3.9.0</protoc.version> <!-- Same version as grpc-proto -->
        <jprotoc.version>0.9.1</jprotoc.version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>1.8</java.version>
        <java.test.version>1.8</java.test.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.test.source>${java.test.version}</maven.compiler.test.source>
        <maven.compiler.test.target>${java.test.version}</maven.compiler.test.target>
    </properties>

    <scm>
        <url>https://github.com/ECF/grpc-osgi-generator</url>
        <connection>scm:git:git@github.com:ECF/grpc-osgi-generator.git</connection>
        <developerConnection>scm:git:git@github.com:ECF/grpc-osgi-generator.git</developerConnection>
    </scm>

    <distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.salesforce.servicelibs</groupId>
                <artifactId>grpc-contrib</artifactId>
                <version>${grpc.contrib.version}</version>
            </dependency>
            <dependency>
                <groupId>com.salesforce.servicelibs</groupId>
                <artifactId>jprotoc</artifactId>
                <version>${jprotoc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-netty</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-protobuf</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-core</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-context</artifactId>
                <version>${grpc.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-stub</artifactId>
                <version>${grpc.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <testSource>${maven.compiler.test.source}</testSource>
                    <testTarget>${maven.compiler.test.target}</testTarget>
                </configuration>
            </plugin>


            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M3</version>
                <dependencies>
<!--                    <dependency>-->
<!--                        <groupId>org.apache.maven.surefire</groupId>-->
<!--                        <artifactId>surefire-junit3</artifactId>-->
<!--                        <version>3.0.0-M3</version>-->
<!--                    </dependency>-->
<!--                    <dependency>-->
<!--                        <groupId>org.apache.maven.surefire</groupId>-->
<!--                        <artifactId>surefire-testng</artifactId>-->
<!--                        <version>3.0.0-M3</version>-->
<!--                    </dependency>-->
                </dependencies>
                <configuration>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>public-release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.1.0</version>
                        <configuration>
                            <author>false</author>
                            <breakiterator>true</breakiterator>
                            <doclint>accessibility,html,reference,syntax</doclint>
                            <keywords>true</keywords>
                            <version>false</version>
                            <source>8</source>
                        </configuration>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.0.1</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>1.6</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.8</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>false</autoReleaseAfterClose>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>